--- a/testpcl/CMakeLists.txt
+++ b/testpcl/CMakeLists.txt
@@ -5,7 +5,26 @@ project(testpcl)
 # This setting is useful for providing JSON file used by CodeLite for code completion
 set(CMAKE_EXPORT_COMPILE_COMMANDS 1)
 
-set(CONFIGURATION_NAME Debug)
+# Compiler options
+# Compiler options
+if(CMAKE_BUILD_TYPE STREQUAL "Debug")
+    set(CONFIGURATION_NAME Debug)
+    add_definitions(-g)
+    add_definitions(-O0)
+    add_definitions(-Wall)
+    set_source_files_properties(
+    ${CXX_SRCS} PROPERTIES COMPILE_FLAGS 
+    " -g")
+else(CMAKE_BUILD_TYPE STREQUAL "Debug")
+    set(CONFIGURATION_NAME Release)
+    add_definitions(-O2)
+    add_definitions(-Wall)
+    add_definitions(-DNDEBUG)
+    set_source_files_properties(
+    ${CXX_SRCS} PROPERTIES COMPILE_FLAGS 
+    " -O2")
+endif(CMAKE_BUILD_TYPE STREQUAL "Debug")
+message( ${CONFIGURATION_NAME})
 
 set(CL_WORKSPACE_DIRECTORY ..)
 # Set default locations
@@ -36,7 +55,7 @@ include_directories(
 link_directories(    
     /usr/local/lib
     ${CL_OUTPUT_DIRECTORY}    
-    /home/tom
+   
 )
 add_definitions(${PCL_DEFINITIONS})
 
@@ -44,6 +63,9 @@ add_executable (testpcl src/main.cpp)
 target_link_libraries (testpcl ${PCL_LIBRARIES})
 target_link_libraries (testpcl testPCLDll)
 target_link_libraries (testpcl ${VTK_LIBRARIES})
+
+
+# Linker options
 #target_link_libraries (testpcl ${Boost_LIBRARIES})
 
 #set_target_properties(testpcl PROPERTIES RUNTIME_OUTPUT_DIRECTORY "./dist/Debug/GNU-Linux/")
