--- a/testPCLDll/testPCLDll.project
+++ b/testPCLDll/testPCLDll.project
@@ -2,7 +2,7 @@
 <CodeLite_Project Name="testPCLDll" Version="11000" InternalType="Library">
   <Plugins>
     <Plugin Name="qmake">
-      <![CDATA[00010001N0005Debug000000000000]]>
+      <![CDATA[00020001N0005Debug0000000000000001N0007Release000000000000]]>
     </Plugin>
   </Plugins>
   <Description/>
@@ -83,7 +83,9 @@
         <StartupCommands/>
       </Debugger>
       <PreBuild/>
-      <PostBuild/>
+      <PostBuild>
+        <Command Enabled="yes">cp output/*.so /home/tom/Documents/nodejs/</Command>
+      </PostBuild>
       <CustomBuild Enabled="no">
         <RebuildCommand/>
         <CleanCommand/>
